Correction de l'attribut wrap en normal

--- a/starterOnly/assets/css/modal.css
+++ b/starterOnly/assets/css/modal.css
@@ -527,7 +527,7 @@ input[data-error]::after {
 .hero-headline {
   font-size: 5rem;
   font-weight: normal;
-  white-space: wrap;
+  white-space: normal;
   width: 200%;
 }
 
